Rename to pykismet3 to avoid name clash in PyPI.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 0.1.0
-files = setup.py pykismet.py
+files = setup.py pykismet3.py
 commit = True
 tag = True
-
+message = "Release version {new_version}."
