Remove quotes from bumpversion commit messages.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,5 +3,5 @@ current_version = 0.1.1
 files = setup.py pykismet3.py
 commit = True
 tag = True
-message = "Release version {new_version}."
+message = Release version {new_version}.
 
