--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
 - if [[ $TRAVIS_PYTHON_VERSION == '3.3' ]]; then export PYVER=py33; fi
 - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then export PYVER=py34; fi
 - if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then export PYVER=py35; fi
-script: COMMAND='coverage run' tox -e$TOXENV
+script: COMMAND='coverage run' tox -e$PYVER
 after_success:
 - codecov
 deploy:
