--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,12 @@ before_install:
 install:
 - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then export PYVER=py26; fi
 - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then export PYVER=py27; fi
-- if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then export PYVER=py32; fi
 - if [[ $TRAVIS_PYTHON_VERSION == '3.3' ]]; then export PYVER=py33; fi
+- if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then export PYVER=py32; fi
 - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then export PYVER=py34; fi
 - if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then export PYVER=py35; fi
-script: PYTHONPATH=$PWD COMMAND='coverage run' tox -e$PYVER
+- if [[ $TRAVIS_PYTHON_VERSION != '3.2' ]]; then export COMMAND='coverage run'; fi
+script: PYTHONPATH=$PWD COMMAND="${COMMAND:-python}" tox -e$PYVER
 after_success:
 - codecov
 deploy:
