unittest2 in Python26.

--- a/tox.ini
+++ b/tox.ini
@@ -6,5 +6,6 @@ envlist = py{35,34,33,32,31,30,27,26}
 passenv=*
 deps =
     requests
+    py26: unittest2
 commands=
     {env:COMMAND:python} akismet/tests.py
