--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py{35,34,33,32,31,30,27,26}
 [testenv]
 passenv=*
 deps =
+    codecov>=1.4.0
     requests
     py26: unittest2
 commands=
