--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = py{35,34,33,32,31,30,27,26}
 passenv=*
 deps =
     codecov>=1.4.0
-    requests
     py26: unittest2
+    -rrequirements-dev.txt
 commands=
     {env:COMMAND:python} akismet/tests.py
