Issue #12: Use mocks in tests (update pip in tox)

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,10 @@ envlist = py{35,34,33,32,31,30,27,26}
 [testenv]
 passenv=*
 deps =
+    py{38,37,36,35,27}: pip>=20.0.1
+    py34: pip==19.1.1
+    py33: pip==10.0.1
+    py32: pip==7.1.2
     codecov>=1.4.0
     py26: unittest2
     -rrequirements-dev.txt
